--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,10 +13,11 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.0",
     "material-design-icons": "^3.0.1",
-    "next": "12.0.8",
+    "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "eslint": "8.7.0",
