--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "sitemap.config.js"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -14,9 +15,11 @@
     "@mui/material": "^5.3.0",
     "material-design-icons": "^3.0.1",
     "next": "^12.0.9",
+    "next-sitemap": "^2.5.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.0",
+    "sitemap": "^7.1.1",
     "swiper": "^7.4.1"
   },
   "devDependencies": {
