add site map npm

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "sitemap": "sitemap.config.js"
-  },
+    "postbuild": "next-sitemap"
+    },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
