--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap"
-    },
+  },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -18,6 +18,7 @@
     "next-sitemap": "^2.5.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hotjar": "^5.0.0",
     "sass": "^1.49.0",
     "sitemap": "^7.1.1",
     "swiper": "^7.4.1"
